test/integration/bad/missing_dist_suffix/user_defined_no_rng.stan
functions {
   real bar_lpdf(real x){
     return 1.0;
   }
}
generated quantities {
   real x = bar_rng(10);
}